# TetrisV2

./: .gitignore  CMakeLists.txt  PLANS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
TetrisVersionOne/: README_v1.md  __init__.py
TetrisVersionOne/agents/: __init__.py  common.py  observation.py
TetrisVersionOne/agents/ppo/: eval.py  train.py
TetrisVersionOne/cc_like_env/: CMakeLists.txt
TetrisVersionOne/env/: __init__.py  modern_tetris_env.py  nes_tetris_env.py  registration.py  wrappers.py
TetrisVersionOne/presets/modern/puzzles/: puzzles.json
TetrisVersionOne/presets/nes/: simple_lines.json
TetrisVersionOne/scripts/: __init__.py  eval.py  play_human.py  train.py
TetrisVersionOne/tests/: CMakeLists.txt  __init__.py  test_env_modern.py  test_env_nes.py  test_placement_planner.py  test_srs_kicks.py
TetrisVersionTwo/: CMakeLists.txt
TetrisVersionTwo/cli/: cc_play.cpp
TetrisVersionTwo/cold_clear_cpp/: CMakeLists.txt  README.md
TetrisVersionTwo/cold_clear_cpp/include/cold_clear_cpp/: board.hpp  bot.hpp  dag.hpp  eval.hpp  movegen.hpp  profiling.hpp  state.hpp  state_map.hpp  tbp.hpp  types.hpp  types.inl
TetrisVersionTwo/cold_clear_cpp/src/: board.cpp  bot.cpp  dag.cpp  eval.cpp  main.cpp  movegen.cpp  state.cpp  tbp.cpp
TetrisVersionTwo/cold_clear_cpp/tests/: test_all.cpp
TetrisVersionTwo/include/tetris_v2/: agent.hpp  cc_agent.hpp  tetris_env.hpp
TetrisVersionTwo/scripts/: play_pygame.py
TetrisVersionTwo/src/: agent.cpp  batch_env.cpp  cc_agent.cpp  tetris_env.cpp
TetrisVersionTwo/tests/: test_cc_agent.cpp  test_tetris_env.cpp
archive/legacy_tests/: test_env_versus.py
archive/scripts_legacy/: eval_agent.sh  generate_line_presets.py  play_precomputed_actions.py
archive/tetris_v2_legacy/: __init__.py  rendering.py
archive/tetris_v2_legacy/adversarial/: __init__.py  self_play.py  versus_env.py
archive/tetris_v2_legacy/agents/: random_agent.py
archive/tetris_v2_legacy/agents/ablations/: README.md  __init__.py
archive/tetris_v2_legacy/agents/adversarial_supplier/: __init__.py
archive/tetris_v2_legacy/agents/dqn/: __init__.py  eval.py
archive/tetris_v2_legacy/agents/heuristics/: random_agent.py
archive/tetris_v2_legacy/agents/offline/: README.md
archive/tetris_v2_legacy/agents/ppo/: __init__.py  eval.py
archive/tetris_v2_legacy/agents/pvp/: README.md  __init__.py
archive/tetris_v2_legacy/agents/single_agent/: __init__.py
archive/tetris_v2_legacy/envs/: nes_tetris_env.py  state_presets.py  wrappers.py
archive/tetris_v2_legacy/scripts/: eval_checkpoint.py
presets/modern/: clears.json
presets/nes/: clears.json
scripts/: eval_agent.ps1  eval_agent.sh  play_preset.py  train_agent.ps1  train_agent.sh  watch_random_agent.py
tests/: test_placement_planner.py
tetris_v2/: rendering.py
tetris_v2/adversarial/: versus_env.py
tetris_v2/agents/: __init__.py
tetris_v2/agents/adversarial_supplier/: README.md
tetris_v2/agents/dqn/: __init__.py  eval.py  models.py  train.py
tetris_v2/agents/exploration/: README.md  __init__.py
tetris_v2/agents/heuristics/: README.md  __init__.py
tetris_v2/agents/offline/: __init__.py
tetris_v2/agents/ppo/: train.py
tetris_v2/agents/single_agent/: README.md  __init__.py  common.py
tetris_v2/agents/single_agent/dqn/: __init__.py  eval.py  models.py  train.py
tetris_v2/agents/single_agent/ppo/: __init__.py  (+3 more)
tetris_v2/configs/: nes_dqn.yaml  nes_ppo.yaml
tetris_v2/envs/: __init__.py  curriculum.py  modern_ruleset.py  modern_tetris_env.py  nes_tetris_env.py  placement_planner.py  registration.py  utils.py  wrappers.py
tetris_v2/scripts/: eval_checkpoint.py  play_human.py  record_video.py  train_modern.py  train_nes.py
tetris_v2/tests/: test_env_modern.py  test_env_nes.py  test_env_versus.py  test_srs_kicks.py
tetris_version_one.egg-info/: SOURCES.txt  requires.txt  top_level.txt
(+4 files in other folders)
