[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris-version-one"
version = "0.1.0"
description = "Stable baseline: Tetris environments + PPO agent"
authors = [{name="Your Name"}]
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=0.29.1",
    "numpy",
    "pygame",
]

[tool.setuptools.packages.find]
where = [""]
include = ["TetrisVersionOne*"]
